# vnpy-trading-framework

./: .gitignore  README.md  README_ENHANCED.md  backtest_utils.py  broker_handler.py  config.yaml  config.yml  consistency_validator.py  data_utils.py  debug_only_combine_files.py  enhanced_trading_example.py  environment.yml  live_trader.py  main.py  performance_analyzer.py  pyproject.toml  q7.py  q7_algorithmic_trading.ipynb  q7_algorithmic_trading.md  requirement.txt  requirements_vnpy.txt  risk_manager.py  strategies.py  test_broker_api.py
cache/: SPY_1Min_2023-01-01_2023-01-07.parquet  SPY_1Min_2023-01-01_2023-01-31.parquet
config/: backtest_config.json  download_config.json  live_trading_config.json
docs/: DEPLOYMENT.md  project_requirement.md  to_do_list.md
notebooks/: project_showcase.ipynb
scripts/: download_data.py  install.py  quick_start.py  run_backtest.py  run_backtests.py  run_live_trading.py  test_framework.py
src/patf_trading_framework/: broker_handler.py  data_utils.py  exception_handler.py  live_trader.py  performance_analyzer.py  strategies.py  websocket_handler.py
src/patf_trading_framework/scripts/: run_backtests.py  run_live_trading.py
strategies/: cta_custom_ratio_strategy.py  cta_ema_adx_strategy.py  cta_zscore_strategy.py  intraday_momentum_reversal_strategy.py
test/: test_framework.py
tests/integration/: test_broker_integration.py
tools/: combine_code.py
