[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patf-trading-framework"
version = "0.1.0"
authors = [
  { name="Richard", email="xieruncheng@gmail.com" }
]
description = "A collection of quantitative trading strategies for the vn.py platform."
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
keywords = ["trading", "algorithmic-trading", "back-testing", "finance", "alpaca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies: these are required to run the project.
# For complete dependencies, install from requirements_vnpy.txt
dependencies = [
    "vnpy>=3.0.0",
]

# Optional dependencies: these allow extra functionality.
# 'dev' includes all tools required for development, testing, and linting.
# Use 'pip install -e .[dev]' to install.
[project.optional-dependencies]
dev = [
    "pytest>=7.0",       # For running tests
    "black",             # Code formatting tool
    "pylint",            # Code static analysis tool
    "pre-commit",        # For automatically running checks before commits
]




[project.urls]
Homepage = "N/A"
"Bug Tracker" = "N/A"

# --- Tool-specific configurations ---




[tool.black]
# Black configurations
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint.main]
# Pylint configurations
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
]